@@ -53,21 +53,6 @@ extern int rpmFLAGS;
 extern "C" {
 #endif
 
-#if !defined(SWIG)
-/**
- * Wrapper to free(3), hides const compilation noise, permit NULL, return NULL.
- * @param p		memory to free
- * @return		NULL always
- */
-/*@unused@*/ static inline /*@null@*/
-void * _free(/*@only@*/ /*@null@*/ /*@out@*/ const void * p)
-	/*@modifies p @*/
-{
-    if (p != NULL)	free((void *)p);
-    return NULL;
-}
-#endif
-
 /** \ingroup rpmts
  * The RPM Transaction Set.
  * Transaction sets are inherently unordered! RPM may reorder transaction
